--- a/views/index.html
+++ b/views/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha Página</title>
+    <title>Fotos de Animais</title>
     <link rel="stylesheet" href="/css/style.css">
-
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
-
 <body>
-    <div>
-        <h1>Minha Página HTML no Localhost</h1>
-        <p>Clique no botão abaixo para saber mais sobre como foi feito projeto.</p>
+    <a class="button-link left-button" href="/tartaruga"> <img src="../public/img/arrow-bar-left.svg" alt="Button left"> Anterior </a>
 
-        <button id="btn">Saiba Mais</button>
+    <div id="content">
+        <div id="center-content">
+            
+        </div>
     </div>
 
+    <a class="button-link left-button" href="/esquilo"> <img src="../public/img/arrow-bar-right.svg" alt="Button right"> Próxima </a>
     <script src="/js/script.js"></script>
 </body>
-
 </html>
