--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,45 +2,65 @@
     padding: 0;
     margin: 0;
 }
-
-body {
-    font-family: Arial, sans-serif;
-    background-color: lavender;
+body{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-
-    color: darkturquoise;
+    width: 100vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-color: black;
 }
-
-div {
-    text-align: center;
-}
-
-h1 {
-    padding-bottom: 20px;
-    font-size: x-large;
-}
-
-p {
-    padding-bottom: 20px;
-    font-size: large;
-}
-
-button {
-    background-color: royalblue;
+.button-link{
+    text-decoration: none;
     padding: 10px 20px;
-
+    background-color: black;
     color: white;
-
+    font-size: 16px;
     border-radius: 5px;
-    border-style: none;
-
-    font-size: large;
-
-    cursor: pointer;
+    position: absolute;
+    top: 15%;
+    transition: background-color 0.5s;
+    display: inline-flex; /* para alinhar a palavra com a imagem dentro do button no caso o p */
+    align-items: center;
 }
-
-
-  
+.left-button{
+    left: 20px;
+}
+.right-button{
+    right: 20px;
+}
+.button-link:hover{
+    background-color: dimgray;
+}
+#content{
+    width: calc(100% - 100px);
+    height: calc(100% - 100px);
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    overflow: hidden;
+}
+#center-content{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+}
+#center-content img{
+    max-width: 40%;
+    height: auto;
+}
+#text-about{
+    padding: 50px;
+    text-align: justify;
+    text-justify: inter-word;
+}
+#text-about h2{
+    margin-bottom: 30px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 40px;
+    font-style: normal;
+}
